chore: adding structure of DoorToDoors
